fix search form overlap bug / #38

--- a/src/scss/layout/_search.scss
+++ b/src/scss/layout/_search.scss
@@ -48,6 +48,7 @@
       color: $color-white;
 
       border-bottom: solid 1px $color-white;
+      border-radius: 0;
 
       @media screen and (max-width: 767px) {
         font-size: 1.5rem;
